# vertex-ai-proxy

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.yaml  main.py  pyproject.toml
modelEval/: local_model_eval.py
ros_agents/: __init__.py  deep_analyzer.py
ros_agents/deep_analyzer/: VertexAIClient.py  answer_validator.py  llm_client.py  logger.py  main.py  model_tester.py  recursive_reasoner.py  task_analyzer.py  task_executor.py
tests/: test_googleSearchRetrieval.py  test_langchainOpenAIClient.py  test_openAIClient.py
