[tool.poetry]
name = "vertex-ai-proxy"
version = "0.1.0"
description = ""
authors = ["Wenqing Yu <yuwenqingisu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
litellm = "^1.50.4"
google-cloud-aiplatform = "^1.70.0"
pyyaml = "^6.0.2"
langfuse = "^2.53.1"
openai = "^1.51.1"
requests = "^2.31.0"
langchain-openai = "^0.2.3"
deepeval = "^1.4.6"
langchain-ollama = "^0.2.0"
langchain = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
